--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: unique
+name: poster_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -34,7 +34,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  get: ^4.7.2
+  
+  # State Management
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  
+  # Image handling
+  image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
+  
+  # Navigation
+  go_router: ^14.2.7
+  
+  # UI Components
+  flutter_staggered_grid_view: ^0.7.0
+  
+  # Utilities
+  uuid: ^4.3.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
